exports[`test basic 1`] = `
"var theme = {
  code: \".Component__className {}\",
  classNames: {
    className: \"Component__className\"
  }
};"
`;

exports[`test different JavaScript code 1`] = `
"var theme = {
  code: \".Component__className {}\",
  classNames: {
    className: \"Component__className\"
  }
};
a + a;import \"module\";"
`;

exports[`test different cssFilename 1`] = `
"var theme = {
  code: \".CustomComponent__className {}\",
  classNames: {
    className: \"CustomComponent__className\"
  }
};"
`;

exports[`test keyframes rule 1`] = `
"var theme = {
  code: \".Component__className{animation-name: Component__hide;color:blue}@keyframes Component__hide {0%{opacity:0}};\",
  classNames: {
    className: \"Component__className\"
  }
};"
`;

exports[`test multiple class names 1`] = `
"var theme = {
  code: \".Component__a .Component__b, .Component__c ~ .Component__d, .Component__d > .Component__e {color:blue}\",
  classNames: {
    a: \"Component__a\",
    b: \"Component__b\",
    c: \"Component__c\",
    d: \"Component__d\",
    e: \"Component__e\"
  }
};"
`;
